@@ -2576,6 +2576,9 @@ create_component_ref_by_pieces_1 (basic_block block, vn_reference_t ref,
 	      {
 		genop3 = size_binop (EXACT_DIV_EXPR, genop3,
 				     size_int (TYPE_ALIGN_UNIT (elmt_type)));
+		/* We may have a useless conversion added by
+		   array_ref_element_size via copy_reference_opts_from_ref.  */
+		STRIP_USELESS_TYPE_CONVERSION (genop3);
 		genop3 = find_or_generate_expression (block, genop3, stmts);
 		if (!genop3)
 		  return NULL_TREE;
